otros/observability-namespace.yaml
# creates namespace named "hello"
apiVersion: v1
kind: Namespace
metadata:
  name: observability
